--- a/index.html
+++ b/index.html
@@ -1,2 +1,21 @@
-# Airtable Base Replicator — Install Pages
-<p>Install pages for students will appear here.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Airtable Base Replicator — Install Pages</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-50 min-h-screen flex items-center justify-center p-8">
+  <div class="max-w-lg w-full">
+    <h1 class="text-2xl font-bold text-gray-800 mb-2">📋 Install Pages</h1>
+    <p class="text-gray-500 mb-6">Click a link to open the installer for that course base.</p>
+    <div class="space-y-3" id="links"></div>
+  </div>
+  <script>
+    // Auto-detect install HTML files
+    const links = document.getElementById('links');
+    links.innerHTML += '<a href="install-all.html" class="block p-4 bg-white rounded-lg shadow hover:shadow-md transition border border-gray-200 text-blue-600 hover:text-blue-800 font-medium">All</a>';
+  </script>
+</body>
+</html>
