--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
   <div class="max-w-lg w-full">
     <h1 class="text-2xl font-bold text-gray-800 mb-2">📋 Install Pages</h1>
     <p class="text-gray-500 mb-6">Click a link to open the installer for that course base.</p>
-    <div class="space-y-3" id="links"></div>
+    <div class="space-y-3">
+    <a href="install-all.html" class="block p-4 bg-white rounded-lg shadow hover:shadow-md transition border border-gray-200 text-blue-600 hover:text-blue-800 font-medium">All</a>
+    <a href="install-influencer-ai-longform-video.html" class="block p-4 bg-white rounded-lg shadow hover:shadow-md transition border border-gray-200 text-blue-600 hover:text-blue-800 font-medium">Influencer Ai Longform Video</a>
+    </div>
   </div>
-  <script>
-    // Auto-detect install HTML files
-    const links = document.getElementById('links');
-    links.innerHTML += '<a href="install-all.html" class="block p-4 bg-white rounded-lg shadow hover:shadow-md transition border border-gray-200 text-blue-600 hover:text-blue-800 font-medium">All</a>';
-  </script>
 </body>
 </html>
